--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@ background-color: #969696;
   
   
   <ol>
-  <li>Programac&oacutein Web </li>
-  <li>Administración de base de datos</li>
-  <li>Ingenieria de softare</li>
-  <li>Redes de computadoras</li>
-  <li>Lenguajes de interfaz</li>
+  <li style="color: red">Programac&oacutein Web </li>
+  <li style="color: rgb(119, 103, 63)">Administración de base de datos</li>
+  <li style="color: rgb(62, 160, 48)">Ingenieria de softare</li>
+  <li style="color: rgb(0, 8, 255)">Redes de computadoras</li>
+  <li style="color: rgb(150, 69, 135)">Lenguajes de interfaz</li>
   </ol>
   
 </div>
